fixed vertical scroll on mobile css

--- a/src/styles/mobile/_app_mobile.scss
+++ b/src/styles/mobile/_app_mobile.scss
@@ -2,7 +2,7 @@
 
 @media (max-width: $mobile), (hover: none) {
     body {
-        overflow-y: scroll;
+        overflow-y: scroll !important;
     }
 
     #main-menu { 
